--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,18 @@
             <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
+        <!-- Renovate testing -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
             <version>2.14.1</version>
-         </dependency>             
+         </dependency>  
+         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.2.4</version>
+         </dependency>
+         <!-- Renovate testing -->    
     </dependencies>
 
 </project>
