--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>jackson-core</artifactId>
             <version>2.2.4</version>
          </dependency>
+         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>1.1.1</version>
+         </dependency>             
          <!-- Renovate testing -->    
     </dependencies>
 
