--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>1.1.1</version>
-         </dependency>             
+         </dependency>
+         <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-erlang</artifactId>
+            <version>1.1.0.RELEASE</version>
+         </dependency>
          <!-- Renovate testing -->    
     </dependencies>
 
