--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>kotlin-utils-js</artifactId>
             <version>0.1.98</version>
          </dependency>
+         <dependency>
+    <groupId>net.sourceforge.jexcelapi</groupId>
+    <artifactId>jxl</artifactId>
+    <version>2.5.7</version>
+</dependency>
          <!-- Renovate testing -->    
     </dependencies>
 
