--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,6 @@
   "prBodyTemplate": "{{{header}}}{{{notes}}}{{{footer}}}",
   "prBodyNotes": [
     "sourceRepoSlug={{sourceRepoSlug}}\n",
-    "After replacement={{replace 'aa' 'bb' sourceRepoSlug}}\n"
+    "After replacement={{replace '-' 'bb' sourceRepoSlug}}\n"
   ]
 }
