--- a/pom.xml
+++ b/pom.xml
@@ -27,40 +27,10 @@
             <scope>test</scope>
         </dependency>
         <!-- Renovate testing -->
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.17.1</version>
-         </dependency>  
-         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>2.13.1</version>
-         </dependency>
-         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>1.1.1</version>
-         </dependency>
-         <dependency>
-            <groupId>org.springframework.amqp</groupId>
-            <artifactId>spring-erlang</artifactId>
-            <version>1.1.0.RELEASE</version>
-         </dependency>
-         <dependency>
-            <groupId>org.brightify.hyperdrive</groupId>
-            <artifactId>kotlin-utils-js</artifactId>
-            <version>0.1.98</version>
-         </dependency>
-         <dependency>
-    <groupId>net.sourceforge.jexcelapi</groupId>
-    <artifactId>jxl</artifactId>
-    <version>2.6.12</version>
-</dependency>
-             <dependency>
-    <groupId>commons-io</groupId>
-    <artifactId>commons-io</artifactId>
-    <version>2.11.0</version>
+<dependency>
+    <groupId>commons-logging</groupId>
+    <artifactId>commons-logging</artifactId>
+    <version>1.1</version>
 </dependency>
          <!-- Renovate testing -->    
     </dependencies>
