--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
     <artifactId>commons-logging</artifactId>
     <version>1.1</version>
 </dependency>
+<dependency>
+    <groupId>com.amazonaws</groupId>
+    <artifactId>aws-java-sdk</artifactId>
+    <version>1.11.1025</version>
+</dependency>
+
          <!-- Renovate testing -->    
     </dependencies>
 
