--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,11 @@
     <artifactId>aws-java-sdk</artifactId>
     <version>1.11.1025</version>
 </dependency>
-
+<dependency>
+    <groupId>com.amazonaws</groupId>
+    <artifactId>aws-java-sdk-core</artifactId>
+    <version>1.12.122</version>
+</dependency>
          <!-- Renovate testing -->    
     </dependencies>
 
