--- a/renovate.json
+++ b/renovate.json
@@ -3,7 +3,7 @@
   "prBodyTemplate": "{{{header}}}{{{notes}}}{{{footer}}}",
   "prBodyNotes": [
     "sourceRepoSlug={{sourceRepoSlug}}\n",
-    "After first hyphen replacement={{replace '-' '%2f' sourceRepoSlug}}\n",
+    "After first hyphen replacement={{replace '{{{depName}}}' '' sourceRepoSlug}}\n",
     "After second hyphen replacement={{replace '-' '%2f' sourceRepoSlug}}\n"
   ]
 }
