--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
     <artifactId>aws-cdk-lib</artifactId>
     <version>2.2.0</version>
 </dependency>
+             <dependency>
+    <groupId>com.amazonaws</groupId>
+    <artifactId>aws-java-sdk-sqs</artifactId>
+    <version>1.12.117</version>
+</dependency>
          <!-- Renovate testing -->    
     </dependencies>
 
