--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
     <artifactId>aws-java-sdk-sqs</artifactId>
     <version>1.12.117</version>
 </dependency>
+             <dependency>
+    <groupId>com.amazonaws</groupId>
+    <artifactId>aws-java-sdk-sts</artifactId>
+    <version>1.12.85</version>
+</dependency>
          <!-- Renovate testing -->    
     </dependencies>
 
