--- a/renovate.json
+++ b/renovate.json
@@ -6,7 +6,7 @@
     "depName={{depName}}\n",
     "sourceUrl={{sourceUrl}}\n",
     "After depName replacement={{replace '{{depName}}' '' sourceRepoSlug}}\n",
-    "After second hyphen replacement={{replace '-' '%2f' sourceRepoSlug}}\n"
+    "After second hyphen replacement={{replace '-' '%2f' sourceRepoSlug}}\n",
     "Replace github sourceUrl={{replace 'https://github.com/' '' sourceUrl}}\n",
     "Replace / ={{replace '/' '%2f' sourceUrl}}\n"
   ]
