--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
     <version>1.12.141</version>
     <scope>test</scope>
 </dependency>
+             <dependency>
+    <groupId>com.amazonaws</groupId>
+    <artifactId>aws-java-sdk-sns</artifactId>
+    <version>1.12.113</version>
+</dependency>
          <!-- Renovate testing -->    
     </dependencies>
 
