--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
     <artifactId>aws-java-sdk-sns</artifactId>
     <version>1.12.113</version>
 </dependency>
+             <dependency>
+    <groupId>com.amazonaws</groupId>
+    <artifactId>aws-java-sdk-lambda</artifactId>
+    <version>1.12.117</version>
+</dependency>
          <!-- Renovate testing -->    
     </dependencies>
 
