--- a/renovate.json
+++ b/renovate.json
@@ -8,6 +8,6 @@
     "After depName replacement={{replace '{{depName}}' '' sourceRepoSlug}}\n",
     "After second hyphen replacement={{replace '-' '%2f' sourceRepoSlug}}\n",
     "Replace github sourceUrl={{replace 'https://github.com/' '' sourceUrl}}\n",
-    "Replace github sourceUrl and encode URI={{{encodeURIComponent {{replace 'https://github.com/' '' sourceUrl}}}}}\n",
+    "Replace github in sourceUrl and encode URI={{{encodeURIComponent {{replace 'https://github.com/' '' sourceUrl}}}}}\n",
   ]
 }
