--- a/pom.xml
+++ b/pom.xml
@@ -28,50 +28,9 @@
         </dependency>
         <!-- Renovate testing -->
 <dependency>
-    <groupId>commons-logging</groupId>
-    <artifactId>commons-logging</artifactId>
-    <version>1.1</version>
-</dependency>
-<dependency>
-    <groupId>com.amazonaws</groupId>
-    <artifactId>aws-java-sdk</artifactId>
-    <version>1.12.141</version>
-</dependency>
-<dependency>
-    <groupId>com.amazonaws</groupId>
-    <artifactId>aws-java-sdk-core</artifactId>
-    <version>1.12.141</version>
-</dependency>
-             <dependency>
-    <groupId>software.amazon.awscdk</groupId>
-    <artifactId>aws-cdk-lib</artifactId>
-    <version>2.8.0</version>
-</dependency>
-             <dependency>
-    <groupId>com.amazonaws</groupId>
-    <artifactId>aws-java-sdk-sqs</artifactId>
-    <version>1.12.141</version>
-</dependency>
-             <dependency>
-    <groupId>com.amazonaws</groupId>
-    <artifactId>aws-java-sdk-sts</artifactId>
-    <version>1.12.141</version>
-</dependency>
-             <dependency>
-    <groupId>com.amazonaws</groupId>
-    <artifactId>aws-java-sdk-test-utils</artifactId>
-    <version>1.12.141</version>
-    <scope>test</scope>
-</dependency>
-             <dependency>
-    <groupId>com.amazonaws</groupId>
-    <artifactId>aws-java-sdk-sns</artifactId>
-    <version>1.12.113</version>
-</dependency>
-             <dependency>
-    <groupId>com.amazonaws</groupId>
-    <artifactId>aws-java-sdk-lambda</artifactId>
-    <version>1.12.117</version>
+    <groupId>org.springframework.webflow</groupId>
+    <artifactId>spring-webflow</artifactId>
+    <version>2.0.6.RELEASE</version>
 </dependency>
          <!-- Renovate testing -->    
     </dependencies>
