--- a/renovate.json
+++ b/renovate.json
@@ -9,6 +9,52 @@
     "After second hyphen replacement={{replace '-' '%2f' sourceRepoSlug}}\n",
     "Replace github sourceUrl={{replace 'https://github.com/' '' sourceUrl}}\n",
     "Replace -depName in sourceRepoSlug {{replace '-{{depName}}' '' sourceRepoSlug}}\n",
-    "{{replace '-{{depName}}' '' sourceRepoSlug}}%2f{{depName}}\n"
+    "{{replace '-{{depName}}' '' sourceRepoSlug}}%2f{{depName}}\n",
+    "  baseBranch = {{{baseBranch}}}\n",
+"  currentValue = {{{currentValue}}}\n",
+"  currentVersion = {{{currentVersion}}}\n",
+"  datasource = {{{datasource}}}\n",
+"  depName = {{{depName}}}\n",
+"  depNameLinked = {{{depNameLinked}}}\n",
+"  depNameSanitized = {{{depNameSanitized}}}\n",
+"  depType = {{{depType}}}\n",
+"  hasReleaseNotes = {{{hasReleaseNotes}}}\n",
+"  isLockfileUpdate = {{{isLockfileUpdate}}}\n",
+"  isMajor = {{{isMajor}}}\n",
+"  isPatch = {{{isPatch}}}\n",
+"  isPin = {{{isPin}}}\n",
+"  isRollback = {{{isRollback}}}\n",
+"  isReplacement = {{{isReplacement}}}\n",
+"  isRange = {{{isRange}}}\n",
+"  isSingleVersion= {{{isSingleVersion}}}\n",
+"  logJSON = {{{logJSON}}}\n",
+"  lookupName = {{{lookupName}}}\n",
+"  newDigest = {{{newDigest}}}\n",
+"  newDigestShort = {{{newDigestShort}}}\n",
+"  newMajor = {{{newMajor}}}\n",
+"  newMinor = {{{newMinor}}}\n",
+"  newName = {{{newName}}}\n",
+"  newValue = {{{newValue}}}\n",
+"  newVersion = {{{newVersion}}}\n",
+"  packageFile = {{{packageFile}}}\n",
+"  packageFileDir = {{{packageFileDir}}}\n",
+"  parentDir = {{{parentDir}}}\n",
+"  platform = {{{platform}}}\n",
+"  prettyDepType = {{{prettyDepType}}}\n",
+"  project = {{{project}}}\n",
+"  recreateClosed = {{{recreateClosed}}}\n",
+"  references = {{{references}}}\n",
+"  releases = {{{releases}}}\n",
+"  releaseNotes = {{{releaseNotes}}}\n",
+"  repository = {{{repository}}}\n",
+"  semanticPrefix = {{{semanticPrefix}}}\n",
+"  sourceRepoSlug = {{{sourceRepoSlug}}}\n",
+"  sourceUrl = {{{sourceUrl}}}\n",
+"  updateType = {{{updateType}}}\n",
+"  upgrades = {{{upgrades}}}\n",
+"  url = {{{url}}}\n",
+"  version = {{{version}}}\n",
+"  versioning = {{{versioning}}}\n",
+"  versions = {{{versions}}}\n"
   ]
 }
