--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
     <artifactId>spring-webflow</artifactId>
     <version>2.0.6.RELEASE</version>
 </dependency>
+             <dependency>
+    <groupId>org.mybatis</groupId>
+    <artifactId>mybatis-spring</artifactId>
+    <version>1.2.1</version>
+</dependency>
          <!-- Renovate testing -->    
     </dependencies>
 
